tests/tooling/fixtures/native/execution/negative/assignment_unknown_target.objc3
module AssignmentUnknownTargetExec;

fn main() -> i32 {
  missing = 3;
  return 0;
}

